# saleae-logic2

./: pyproject.toml  pysigrok_logic2.py
